增加推荐资料

--- a/_posts/2019-04-21-iOS 对于跨平台的看法.markdown
+++ b/_posts/2019-04-21-iOS 对于跨平台的看法.markdown
@@ -39,3 +39,19 @@ H5作为存在时间最久的跨平台方案目前也是各大公司作为跨平
 Better Late Than Never ，愿我们都能跨出自己的第一步。
 
 站在巨人的肩膀上，感谢前辈们的文章。
+
+
+
+
+
+## 推荐资料
+
+https://www.zhihu.com/question/307298908/answer/569471390
+
+https://zhuanlan.zhihu.com/p/64348609
+
+https://www.zhihu.com/question/307298908
+
+https://www.zhihu.com/question/50156415
+
+https://mp.weixin.qq.com/s/kCa9qVBkvYRSAGmxyInIPQ
